--- a/node-red-react-editor/package.json
+++ b/node-red-react-editor/package.json
@@ -53,6 +53,7 @@
     "d3": "^3.5.16",
     "file-loader": "^0.8.5",
     "isomorphic-fetch": "^2.2.1",
+    "moment": "^2.13.0",
     "react": "^0.14.8",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
