--- a/node-red-react-editor/package.json
+++ b/node-red-react-editor/package.json
@@ -63,6 +63,7 @@
     "react-router-redux": "^4.0.0",
     "redux": "^3.1.1",
     "redux-thunk": "^1.0.3",
+    "superagent": "^1.8.3",
     "url-loader": "^0.5.7"
   }
 }
