--- a/red-server/package.json
+++ b/red-server/package.json
@@ -10,8 +10,14 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "connect-redis": "^3.0.2",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
-    "http": "0.0.0"
+    "express-session": "^1.13.0",
+    "http": "0.0.0",
+    "mongoose": "^4.5.0",
+    "passport": "^0.3.2",
+    "passport-github": "^1.1.0",
+    "superagent": "^2.0.0"
   }
 }
