--- a/node-red-react-editor/package.json
+++ b/node-red-react-editor/package.json
@@ -64,6 +64,7 @@
     "redux": "^3.1.1",
     "redux-thunk": "^1.0.3",
     "reselect": "^2.5.1",
+    "socket.io-client": "^1.4.8",
     "superagent": "^1.8.3",
     "url-loader": "^0.5.7"
   }
