--- a/node-red-react-editor/package.json
+++ b/node-red-react-editor/package.json
@@ -55,6 +55,7 @@
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.13.0",
     "react": "^0.14.8",
+    "react-codemirror": "^0.2.6",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^0.14.6",
