--- a/red-server/package.json
+++ b/red-server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node server.js",
+    "startold": "nodemon --exec babel-node server.js",
+    "start": "pm2 start server.js --interpreter ./node_modules/.bin/babel-node",
     "dev": "nodemon --exec babel-node server.js 9000"
   },
   "author": "Tom Lodge",
