--- a/red-server/package.json
+++ b/red-server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "startold": "nodemon --exec babel-node server.js",
+    "watch": "nodemon --exec babel-node server.js",
     "start": "pm2 start server.js --interpreter ./node_modules/.bin/babel-node",
     "dev": "nodemon --exec babel-node server.js 9000"
   },
