--- a/red-server/package.json
+++ b/red-server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon --exec babel-node server.js",
-    "start": "pm2 start server.js --interpreter ./node_modules/.bin/babel-node",
+    "start": "pm2 start server.js --name editor --interpreter ./node_modules/.bin/babel-node",
     "dev": "nodemon --exec babel-node server.js 9000"
   },
   "author": "Tom Lodge",
