--- a/red-server/package.json
+++ b/red-server/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon --exec babel-node server.js",
     "start": "pm2 start server.js --name editor --interpreter ./node_modules/.bin/babel-node",
-    "dev": "babel-node server.js"
+    "dev": "nodemon --exec babel-node server.js 9000"
   },
   "author": "Tom Lodge",
   "license": "MIT",
