--- a/red-server/package.json
+++ b/red-server/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon --exec babel-node server.js",
+    "watch": "nodemon --ignore 'flow*.flow' --exec babel-node server.js",
     "start": "pm2 start server.js --name editor --interpreter ./node_modules/.bin/babel-node",
-    "dev": "nodemon --exec babel-node server.js 9000"
+    "dev": "nodemon --ignore 'flow*.flow' --exec babel-node server.js 9000"
   },
   "author": "Tom Lodge",
   "license": "MIT",
