--- a/node-red-react-editor/package.json
+++ b/node-red-react-editor/package.json
@@ -30,6 +30,7 @@
     "babel-core": "^6.3.17",
     "babel-eslint": "^4.1.6",
     "babel-loader": "^6.2.0",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015-loose": "^6.1.3",
     "babel-preset-react": "6.3.13",
     "babel-preset-stage-0": "^6.3.13",
