--- a/src/server/Dockerfile
+++ b/src/server/Dockerfile
@@ -1,15 +1,8 @@
-FROM node:boron
+FROM tlodge/databox-sdk-base
 
-# Create app directory
-RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
 # Install app dependencies
 ADD static static
 ADD views views
-COPY package.json .
-COPY config.sample.js config.js
 COPY build/bundle.js index.js
-RUN npm install
-
-EXPOSE 8086
