--- a/src/server/package.json
+++ b/src/server/package.json
@@ -9,15 +9,16 @@
     "pm": "pm2 start server.js --name editor --interpreter ./node_modules/.bin/babel-node",
     "start": "nodemon --ignore 'flow*.flow' --exec babel-node server.js",
     "dev": "nodemon --ignore 'flow*.flow' --exec babel-node server.js 9000",
+    "base": "docker build --no-cache -t databox-sdk-base -f Dockerfile.base . && docker tag databox-sdk-base tlodge/databox-sdk-base && docker push tlodge/databox-sdk-base",
     "build": "webpack --progress",
-    "docker": "docker build --no-cache -t $npm_package_name .",
-    "release": "docker tag $npm_package_name tlodge/$npm_package_name && docker push tlodge/$npm_package_name"
+    "docker": "docker build --no-cache -t databox-sdk .",
+    "release": "docker tag databox-sdk tlodge/databox-sdk && docker push tlodge/databox-sdk",
+    "deploy": "npm run build && npm run docker && npm run release"
   },
   "author": "Tom Lodge",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.15.0",
-    "connect-mongostore": "^0.1.4",
     "connect-redis": "^3.0.2",
     "dockerode": "^2.2.10",
     "ejs": "^2.4.1",
@@ -27,7 +28,6 @@
     "mongoose": "^4.5.0",
     "passport": "^0.3.2",
     "passport-github": "^1.1.0",
-    "react-hot-loader": "^1.3.1",
     "superagent": "^2.0.0",
     "tar-stream": "^1.5.2"
   },
@@ -39,6 +39,7 @@
     "babel-preset-es2015": "^6.9.0",
     "nodemon": "^1.9.2",
     "webpack": "^3.4.1",
-    "webpack-node-externals": "^1.6.0"
+    "webpack-node-externals": "^1.6.0",
+    "react-hot-loader": "^1.3.1"
   }
 }
