--- a/src/package.json
+++ b/src/package.json
@@ -81,6 +81,7 @@
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "2.1.0-beta.21",
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dashboard": "0.1.8",
     "webpack-dev-middleware": "1.6.1",
     "webpack-hot-middleware": "2.12.2",
