--- a/src/server/docker-compose.yml
+++ b/src/server/docker-compose.yml
@@ -35,3 +35,29 @@ mock-datasource:
     /root/start.sh
   container_name:
     mock-datasource
+
+databox-test-server:
+  image:
+    tlodge/databox-test-server
+  links:
+    - redis
+    - mongo
+  ports:
+    - "9090:9090"
+    - "8435"
+  container_name:
+    databox-test-server
+  command:
+    node index.js
+
+openface:
+  image:
+    tlodge/openface
+  ports:
+    - "9001"
+  volumes:
+    - ${HOSTMOUNT}/openface/red/:/root/openface/demos/red/
+  container_name:
+    openface
+  command:
+    /root/start.sh
