changes name of manifest to databox-manifest and save Dockerfile in repo

--- a/src/server/conf/settings.json
+++ b/src/server/conf/settings.json
@@ -12,7 +12,7 @@
         "URL": "http://localhost:8091"
     },
     "registry": {
-        "URL": "localhost:5000"
+        "URL": ""
     },
     "mongo": {
         "URL": "mongodb://localhost:27017"
