--- a/src/package.json
+++ b/src/package.json
@@ -119,6 +119,7 @@
     "redux-thunk": "2.1.0",
     "reflexbox": "2.2.3",
     "reselect": "2.5.3",
+    "socket.io-client": "^2.0.3",
     "superagent": "3.3.1"
   }
 }
