--- a/src/server/package.json
+++ b/src/server/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^4.5.0",
     "passport": "^0.3.2",
     "passport-github": "^1.1.0",
+    "socket.io": "^2.0.3",
     "superagent": "^2.0.0",
     "tar-stream": "^1.5.2"
   },
