updated settings page

--- a/src/server/conf/settings.old.json
+++ b/src/server/conf/settings.old.json
@@ -1,8 +1,8 @@
-{   
+{
     "secret": "asdaksgdsahgdhsagd ahjsgdjhsg",
     "github": {
-        "CLIENT_ID": "",
-        "CLIENT_SECRET": "",
+        "CLIENT_ID": "994daf2637cc8a136561",
+        "CLIENT_SECRET": "116f747f3de290b3c3cdd4c61b4ae5434d1bb8cc",
         "CALLBACK": "http://localhost:8086/auth/github/callback",
         "API": "https://api.github.com",
         "RAW_URL": "https://raw.githubusercontent.com",
