--- a/src/package.json
+++ b/src/package.json
@@ -66,7 +66,7 @@
     "jscs": "3.0.7",
     "jsdom": "9.4.5",
     "mocha": "3.0.2",
-    "node-sass": "3.8.0",
+    "node-sass": "^3.8.0",
     "postcss-loader": "0.11.1",
     "react-addons-perf": "15.4.2",
     "react-addons-test-utils": "15.3.1",
@@ -96,25 +96,22 @@
     "brace": "^0.10.0",
     "classnames": "2.2.5",
     "express": "4.14.0",
-    "fbemitter": "2.1.1",
     "http-proxy": "^1.16.2",
     "moment": "^2.17.1",
-    "node-sass": "^3.8.0",
-    "react": "15.4.2",
+    "react": "^16.0.0",
     "react-ace": "^4.1.6",
     "react-addons-css-transition-group": "^15.4.1",
     "react-addons-perf": "15.4.2",
     "react-addons-transition-group": "^15.4.1",
     "react-dnd": "2.1.4",
     "react-dnd-html5-backend": "2.1.2",
-    "react-dom": "15.4.2",
+    "react-dom": "^16.0.0",
     "react-hot-loader": "3.0.0-beta.2",
     "react-md": "^1.0.6",
     "react-redux": "4.4.5",
     "react-router": "2.7.0",
     "react-router-redux": "4.0.5",
     "redux": "3.5.2",
-    "redux-logger": "2.6.1",
     "redux-promise": "0.5.3",
     "redux-thunk": "2.1.0",
     "reflexbox": "2.2.3",
