--- a/src/package.json
+++ b/src/package.json
@@ -41,6 +41,7 @@
     "babel-core": "6.14.0",
     "babel-eslint": "6.1.2",
     "babel-loader": "6.2.5",
+    "babel-minify-webpack-plugin": "^0.2.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-transform-react-constant-elements": "6.9.1",
     "babel-plugin-transform-react-remove-prop-types": "0.2.9",
@@ -80,7 +81,6 @@
     "sass-loader": "4.0.1",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
-    "webpack": "2.1.0-beta.21",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dashboard": "0.1.8",
     "webpack-dev-middleware": "1.6.1",
@@ -118,6 +118,7 @@
     "reflexbox": "2.2.3",
     "reselect": "2.5.3",
     "socket.io-client": "^2.0.3",
-    "superagent": "3.3.1"
+    "superagent": "3.3.1",
+    "webpack": "^3.8.1"
   }
 }
