--- a/src/server/package.json
+++ b/src/server/package.json
@@ -40,8 +40,8 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.9.0",
     "nodemon": "^1.9.2",
+    "react-hot-loader": "^1.3.1",
     "webpack": "^3.4.1",
-    "webpack-node-externals": "^1.6.0",
-    "react-hot-loader": "^1.3.1"
+    "webpack-node-externals": "^1.6.0"
   }
 }
