adding in private data tracking

--- a/src/package.json
+++ b/src/package.json
@@ -53,6 +53,7 @@
     "chai-jquery": "2.0.0",
     "cheerio": "0.22.0",
     "colors": "1.1.2",
+    "compression-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "3.0.1",
     "cross-env": "2.0.1",
     "css-loader": "0.24.0",
@@ -100,7 +101,7 @@
     "json-schema-to-flow-type": "^0.2.6",
     "moment": "^2.17.1",
     "react": "^16.0.0",
-    "react-ace": "^4.1.6",
+    "react-ace": "^5.7.0",
     "react-addons-css-transition-group": "^15.4.1",
     "react-addons-perf": "15.4.2",
     "react-addons-transition-group": "^15.4.1",
