--- a/src/server/lib/node/package.json
+++ b/src/server/lib/node/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "node-sass": "^4.7.2",
     "react-redux": "^5.0.5",
     "redux": "^3.7.2"
   }
