--- a/src/package.json
+++ b/src/package.json
@@ -110,6 +110,7 @@
     "react-dom": "^16.0.0",
     "react-hot-loader": "3.0.0-beta.2",
     "react-md": "^1.0.6",
+    "react-rangeslider": "^2.2.0",
     "react-redux": "4.4.5",
     "react-router": "2.7.0",
     "react-router-redux": "4.0.5",
