--- a/src/package.json
+++ b/src/package.json
@@ -37,8 +37,8 @@
   },
   "homepage": "https://github.com/tlodge",
   "devDependencies": {
-    "babel-cli": "6.14.0",
-    "babel-core": "6.14.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "6.1.2",
     "babel-loader": "6.2.5",
     "babel-minify-webpack-plugin": "^0.2.0",
@@ -46,7 +46,7 @@
     "babel-plugin-transform-react-constant-elements": "6.9.1",
     "babel-plugin-transform-react-remove-prop-types": "0.2.9",
     "babel-plugin-transform-runtime": "6.15.0",
-    "babel-preset-es2015": "6.14.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "6.11.1",
     "babel-preset-stage-0": "6.5.0",
     "chai": "3.5.0",
@@ -62,18 +62,17 @@
     "eslint-plugin-react": "6.2.0",
     "extract-text-webpack-plugin": "2.0.0-beta.3",
     "file-loader": "0.9.0",
-    "flow-bin": "0.31.1",
-    "http-server": "0.9.0",
+    "flow-bin": "^0.75.0",
+    "http-server": "^0.11.1",
     "jquery": "3.1.0",
     "jscs": "3.0.7",
     "jsdom": "9.4.5",
     "mocha": "3.0.2",
-    "node-sass": "^3.8.0",
     "postcss-loader": "0.11.1",
     "react-addons-perf": "15.4.2",
     "react-addons-test-utils": "15.3.1",
     "redbox-react": "1.3.0",
-    "redux-devtools": "3.3.1",
+    "redux-devtools": "^3.4.1",
     "redux-devtools-dock-monitor": "1.1.1",
     "redux-devtools-log-monitor": "1.0.11",
     "redux-immutable-state-invariant": "1.2.3",
@@ -82,24 +81,25 @@
     "sass-loader": "4.0.1",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
-    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-bundle-analyzer": "^2.13.1",
     "webpack-dashboard": "0.1.8",
     "webpack-dev-middleware": "1.6.1",
     "webpack-hot-middleware": "2.12.2",
     "webpack-merge": "0.14.1",
-    "why-did-you-update": "0.0.8"
+    "why-did-you-update": "^0.1.1"
   },
   "dependencies": {
     "autoprefixer": "6.4.1",
     "babel-runtime": "6.11.6",
     "bluebird": "3.4.7",
-    "body-parser": "1.16.1",
+    "body-parser": "^1.18.3",
     "brace": "^0.10.0",
     "classnames": "2.2.5",
-    "express": "4.14.0",
+    "express": "^4.16.3",
     "http-proxy": "^1.16.2",
-    "json-schema-to-flow-type": "^0.2.6",
-    "moment": "^2.17.1",
+    "json-schema-to-flow-type": "^0.4.0",
+    "moment": "^2.22.2",
+    "node-sass": "^4.9.0",
     "react": "^16.0.0",
     "react-ace": "^5.7.0",
     "react-addons-css-transition-group": "^15.4.1",
@@ -120,7 +120,7 @@
     "reflexbox": "2.2.3",
     "reselect": "2.5.3",
     "socket.io-client": "^2.0.3",
-    "superagent": "3.3.1",
+    "superagent": "^3.8.3",
     "webpack": "^3.8.1"
   }
 }
