recursilvely read schemas to prevent dependency issue

--- a/src/server/Dockerfile.base
+++ b/src/server/Dockerfile.base
@@ -6,6 +6,6 @@ RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
 COPY package.json .
-RUN npm install --production
+RUN npm install 
 
 EXPOSE 8086
